clusters/homelab/apps/real-world-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-world-api
spec:
  selector:
    app: real-world-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
