clusters/homelab/apps/real-world-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: real-world-api
  namespace: real-world
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: real-api.andrealbuquerque.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: real-world-api
                port:
                  number: 80
